deploy/base/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rhacs-manager-backend
  namespace: rhacs-manager
spec:
  selector:
    app: rhacs-manager-backend
  ports:
    - port: 8000
      targetPort: 8000
