deploy/base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rhacs-manager-frontend
  namespace: rhacs-manager
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: rhacs-manager-oauth-proxy-tls
spec:
  selector:
    app: rhacs-manager-frontend
  ports:
    - name: oauth-proxy
      port: 8443
      targetPort: 8443
